[tool.poetry]
name = "autonode-diagrams"
version = "1.0.4"
description = "Automatically generate node icons for Python Diagrams based on label text"
authors = ["Ryan McKeown <ryanmckeown@mail4me.com>"]
readme = "README.md"
packages = [{include = "autonode_diagrams"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Source = "https://github.com/Machione/autonode-diagrams"
Funding = "https://ko-fi.com/machione"


[tool.poetry.dependencies]
python = "^3.7"
diagrams = ">=0.6.0"
pillow = ">=9.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
